--- a/index.ipynb
+++ b/index.ipynb
@@ -34,7 +34,8 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "import."
+    "import numpy as np\n",
+    "import pa"
    ]
   },
   {
