Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -35,8 +35,7 @@
    "source": [
     "#Your code here\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import "
+    "import pa"
    ]
   },
   {
