--- a/index.ipynb
+++ b/index.ipynb
@@ -36,7 +36,8 @@
     "#Your code here\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import "
+    "import matplotlib.pyplot as plt\n",
+    "%"
    ]
   },
   {
