--- a/index.ipynb
+++ b/index.ipynb
@@ -37,7 +37,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n"
+    "%matplotlib inline\n",
+    "df = pd.import"
    ]
   },
   {
