--- a/index.ipynb
+++ b/index.ipynb
@@ -38,7 +38,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "df = pd.import"
+    "df = pd.read_csv()"
    ]
   },
   {
