Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -98,7 +98,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "df.age.mean()\n",
+    "df.age,"
    ]
   },
   {
