Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -99,8 +99,8 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "df.age.mean()\n",
-    "df.age,"
+    "age_mean = df.age.mean()\n",
+    "age_median = df.age.meadia()\n"
    ]
   },
   {
