Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -100,7 +100,8 @@
    "source": [
     "#Your code here\n",
     "age_mean = df.age.mean()\n",
-    "age_median = df.age.meadia()\n"
+    "age_median = df.age.meadia()\n",
+    "df['Age']."
    ]
   },
   {
