--- a/index.ipynb
+++ b/index.ipynb
@@ -101,7 +101,7 @@
     "#Your code here\n",
     "age_mean = df.age.mean()\n",
     "age_median = df.age.meadia()\n",
-    "df['Age']."
+    "df['Age'].plot(kind='hist', bins)"
    ]
   },
   {
