Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -142,7 +142,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "for col in ['Age']:\n",
+    "    "
    ]
   },
   {
