--- a/index.ipynb
+++ b/index.ipynb
@@ -144,7 +144,7 @@
    "source": [
     "#Your code here\n",
     "for col in ['Age']:\n",
-    "    "
+    "    print('Values for {}')"
    ]
   },
   {
