--- a/index.ipynb
+++ b/index.ipynb
@@ -138,13 +138,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Values for age: Age\n",
+      "[22.   38.   26.   35.     nan 54.    2.   27.   14.    4.   58.   20.\n",
+      " 39.   55.   31.   34.   15.   28.    8.   19.   40.   66.   42.   21.\n",
+      " 18.    3.    7.   49.   29.   65.   28.5   5.   11.   45.   17.   32.\n",
+      " 16.   25.    0.83 30.   33.   23.   24.   46.   59.   71.   37.   47.\n",
+      " 14.5  70.5  32.5  12.    9.   36.5  51.   55.5  40.5  44.    1.   61.\n",
+      " 56.   50.   36.   45.5  20.5  62.   41.   52.   63.   23.5   0.92 43.\n",
+      " 60.   10.   64.   13.   48.    0.75 53.   57.   80.   70.   24.5   6.\n",
+      "  0.67 30.5   0.42 34.5  74.  ])\n"
+     ]
+    }
+   ],
    "source": [
     "#Your code here\n",
     "for col in ['Age']:\n",
-    "    print('Values for age: {}\\n{}).format(col, df[col].unique())"
+    "    print('Values for age: {}\\n{})'.format(col, df[col].unique()))"
    ]
   },
   {
