Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -122,8 +122,10 @@
    ],
    "source": [
     "#Your code here\n",
-    "age_mean = df.Age.mean()\n",
-    "age_median = df.Age.median()\n",
+    "df['Age']\n",
+    "\n",
+    "\n",
+    "\n",
     "df['Age'].plot(kind='hist')"
    ]
   },
