Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -122,7 +122,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "df.Age.apply(['mean','median'])\n",
+    "print(df.Age.apply(['mean','median','std']))\n",
     "\n",
     "\n",
     "\n",
