Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -172,8 +172,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "for col in ['Age']:\n",
-    "    print('Values for age: {}\\n{})'.format(col, df[col].unique()))"
+    "age_na_mean = "
    ]
   },
   {
