Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -172,7 +172,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "age_na_mean = "
+    "age_na_mean = df.Age.fillna(value=)"
    ]
   },
   {
