Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -172,7 +172,8 @@
    ],
    "source": [
     "#Your code here\n",
-    "age_na_mean = df.Age.fillna(value=)"
+    "age_na_mean = df.Age.fillna(value=df.Age.mean)\n",
+    "print(age+)"
    ]
   },
   {
