Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -173,7 +173,7 @@
    "source": [
     "#Your code here\n",
     "age_na_mean = df.Age.fillna(value=df.Age.mean)\n",
-    "print(age_na_mean.apply())"
+    "print(age+)"
    ]
   },
   {
