--- a/index.ipynb
+++ b/index.ipynb
@@ -151,21 +151,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-13-07ea46707e09>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-14-6f62812f9baa>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-07ea46707e09>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    print(age_na_mean.apply(['mean','median','std']))\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-6f62812f9baa>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    print(age_na_mean.apply(['mean','median','std']))\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "#Your code here\n",
-    "age_na_mean = df.Age.fillna(value=df.Age.mean\n",
+    "age_na_mean = df.Age.fillna(value=df.Age.mean())\n",
     "print(age_na_mean.apply(['mean','median','std']))\n"
    ]
   },
