Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -151,22 +151,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-14-6f62812f9baa>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-6f62812f9baa>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    print(age_na_mean.apply(['mean','median','std']))\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean      29.699118\n",
+      "median    29.699118\n",
+      "std       13.002015\n",
+      "Name: Age, dtype: float64\n"
      ]
     }
    ],
    "source": [
     "#Your code here\n",
     "age_na_mean = df.Age.fillna(value=df.Age.mean())\n",
-    "print(age_na_mean.apply(['mean','median','std']))\n"
+    "print(age_na_mean.apply(['mean','median','std']))\n",
+    "age_mean,"
    ]
   },
   {
