--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "age_na_median = "
+    "age_na_median = df.A"
    ]
   },
   {
