Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "age_na_median = df.A"
+    "age_na_median = df.Age.fillna(val)"
    ]
   },
   {
