--- a/index.ipynb
+++ b/index.ipynb
@@ -214,12 +214,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "age_na_median = df.Age.fillna(val)"
+    "age_na_median = df.Age.fillna(value=df.Age.median())\n"
    ]
   },
   {
