Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,8 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "age_na_median = df.Age.fillna(value=df.Age.median())\n"
+    "age_na_median = df.Age.fillna(value=df.Age.median())\n",
+    "print(age_na_median.apply())"
    ]
   },
   {
