Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -214,13 +214,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean      29.361582\n",
+      "median    28.000000\n",
+      "std       13.019697\n",
+      "Name: Age, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "#Your code here\n",
     "age_na_median = df.Age.fillna(value=df.Age.median())\n",
-    "print(age_na_median.apply())"
+    "print(age_na_median.apply(['mean','median','std']))\n"
    ]
   },
   {
